# C-Snake

./: CMakeLists.txt  README.md
src/: ScoreSheet.cpp  ScoreSheet.h  ai_snake.cpp  ai_snake.h  controller.cpp  controller.h  game.cpp  game.h  main.cpp  menu.cpp  menu.h  renderer.cpp  renderer.h  scoreSheet.cpp  scoreSheet.h  scoresheet.cpp  scoresheet.h  sdl_utility.h  snake.cpp  snake.h
